--- a/frontend/src/landing/index.html
+++ b/frontend/src/landing/index.html
@@ -10,15 +10,14 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="landing/assets/img/logo-M.png" rel="icon">
+  <link href="assets/img/logo-M.png" rel="icon">
   <link href="assets/img/logo-M.png" rel="apple-touch-icon">
-  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="landing/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -102,7 +101,6 @@
 
   <main id="main">
 
-    
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about section-bg">
@@ -194,7 +192,8 @@
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
-            </div        </div>
+            </div>
+          </div>
         </div>
 
       </div>
